--- a/zencan-client/Cargo.toml
+++ b/zencan-client/Cargo.toml
@@ -13,14 +13,14 @@ repository.workspace = true
 
 [dependencies]
 # Internal
-zencan-common = { workspace = true, features = ["socketcan", "log"] }
+zencan-common = { workspace = true, features = ["log"] }
 
 # External
 crc16.workspace = true
 futures.workspace = true
 log.workspace = true
 snafu.workspace = true
-socketcan.workspace = true
+#socketcan.workspace = true
 tokio = { version = "1.45.0", features = [
     "net",
     "time",
@@ -40,3 +40,7 @@ assertables = "9.8.2"
 [package.metadata.docs.rs]
 # defines the configuration attribute `docsrs`
 rustdoc-args = ["--cfg", "docsrs"]
+
+[features]
+default = ["socketcan"]
+socketcan = ["zencan-common/socketcan"]
